src/objects/Quarterly_Bonus__c.object
<CustomObject>
    <description>AstrumTIME - Install Team Quarterly Bonus</description>
    <fields>
        <fullName>Display_Year__c</fullName>
        <description>Year This Bonus Applies</description>
        <formula>TEXT(Year__c )</formula>
        <inlineHelpText>Year This Bonus Applies</inlineHelpText>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Team__c</fullName>
        <description>Install Team Receiving This Bonus</description>
        <inlineHelpText>Install Team Receiving This Bonus</inlineHelpText>
        <label>Install Team</label>
        <referenceTo>Install_Team__c</referenceTo>
        <relationshipLabel>Quarterly Bonuses</relationshipLabel>
        <relationshipName>Quarterly_Bonuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_Of_Projects_Ahead_of_Budget__c</fullName>
        <description>Number of Projects Within Budgeted Hours</description>
        <inlineHelpText>Number of Projects Within Budgeted Hours</inlineHelpText>
        <label>Number Of Projects Ahead of Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Projects_Behind_Budget__c</fullName>
        <description>Number of Projects Beyond Budgeted Hours</description>
        <inlineHelpText>Number of Projects Beyond Budgeted Hours</inlineHelpText>
        <label>Number of Projects Behind Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Quarter For This Bonus</description>
        <inlineHelpText>Quarter For This Bonus</inlineHelpText>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours_Ahead_Behind__c</fullName>
        <description>Total Number of Hours Ahead/Behind on Projects This Quarter</description>
        <inlineHelpText>Total Number of Hours Ahead/Behind on Projects This Quarter</inlineHelpText>
        <label>Total Number of Hours Ahead/Behind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year For This Bonus</description>
        <inlineHelpText>Year For This Bonus</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quarterly Bonus</label>
    <nameField>
        <displayFormat>QB-{0000000000}</displayFormat>
        <label>Quarterly Bonus Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Bonuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>